--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,12 @@
     "tw": "npx tailwindcss -i ./src/input.css -o ./src/index.css"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.48.0",
     "antd": "^5.18.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1",
-    "use-sound": "^4.0.1"
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
